[metadata]
name = bbb-stress-test
version = 0.1.0
description = A stress testing tool for BigBlueButton
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/bbb-stress-test
license = MIT
keywords = BigBlueButton, load, stress, testing
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    selenium==3.141.0
    bigbluebutton-api-python==0.0.11
package_dir =
    =src
packages = find:
zip_safe = True

[options.entry_points]
console_scripts =
    bbb-stress-client = bbb_stress_test.client:main
    bbb-list-meetings = bbb_stress_test.list_meetings:main

[options.extras_require]
dev =
    bandit==1.6.2
    black==19.10b0
    flake8==3.7.9
    ipdb==0.12.2
    ipython==7.9.0
    isort==4.3.21
    mypy==0.761
    pyfakefs==3.7.1
    pylint==2.4.4
    pytest-cov==2.8.1
    pytest-django==3.8.0
    pytest==5.3.5
ci =
    twine==2.0.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_bbb=bbb_stress_test
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,THIRDPARTY,BBB,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[mypy]
ignore_missing_imports = True
